--- a/app/assets/stylesheets/events.css
+++ b/app/assets/stylesheets/events.css
@@ -7,3 +7,14 @@
     padding: 5px;
     width: 50%;
 }
+.btn{
+    padding: 5px;
+}
+.d-btn{
+    padding: 5px;
+    background-color: rgb(245, 51, 51);
+    border: 1px solid #000;
+    font-weight: bold;
+    border-radius: 3px;
+    color: #fff;
+}
