--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,24 +26,41 @@
             <li>
                 <%= link_to "Events", events_path %>
             </li>
-            <li>
-                <%= link_to "Add event", new_event_path %>
-            </li>
-            <li>
-                <a href="">Signup</a>
-            </li>
-            <li>
-                <a href="">Singin</a>
-            </li>
-            <li>
-                <a href="">Signout</a>
-            </li>
+
+            <% if user_signed_in? %>
+            
+              <li>
+                  <%= link_to "Add event", new_event_path %>
+              </li>
+
+              <li>
+                  <%= link_to "Edit profile", edit_user_registration_path %>
+              </li>
+              <li>
+                  <%= link_to('Sign out', destroy_user_session_path, :method => 'delete') %>
+              </li>
+
+            <% else %>
+
+              <li>
+                  <%= link_to "Sign up", new_user_registration_path %>
+              </li>
+              <li>
+                  <%= link_to "Sign in", new_user_session_path %>
+              </li>
+
+            <% end %>
         </ul>
     </nav>
 
   <body>
 
     <div class="content">
+
+      <% if notice %>
+        <%= render 'layouts/alerts' %>
+      <% end %>
+
       <%= yield %>
     </div>
 
