--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <nav>
         <ul>
             <li>
-                <%= link_to "EVENTS APP", root_path %>
+                <strong> <%= link_to "EVENTS APP", root_path %> </strong>
             </li>
             <li>
                 <%= link_to "Events", events_path %>
