--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,3 +33,13 @@ nav ul li a{
 .btn{
     padding: 5px;
 }
+
+
+@media screen and (max-width: 700px) {
+    .content{
+        padding-top: 70px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-bottom: 100px;
+    }
+}
