--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
+<%= stylesheet_link_tag "events", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
+
 <h2>Forgot your password?</h2>
+
+<br>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"Enter your resistered password...", class:"field" %>
   </div>
 
+  <br>
+
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Send me reset password instructions", class:"btn" %>
   </div>
 <% end %>
+
+<br>
 
 <%= render "devise/shared/links" %>
